--- a/src/components/css/ToggleButton.css
+++ b/src/components/css/ToggleButton.css
@@ -1,34 +1,33 @@
 
 
 .toggle-container {
-  width: 160px;
-  height: 100px;
-  background-color: #f5f5f5;
-  border-radius: 40px;
-  cursor: pointer;
+  width: 128px;
+  height: 70px;
+  background-color: #eaeaea;
+  border-radius: 18px;
   position: fixed; 
-  top: 20px; 
-  right: 20px; 
+  top: 25px; 
+  right: 25px; 
   z-index: 1000; 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: bold;
-  color: rgb(0, 0, 0);
+  color: rgb(22, 22, 22);
   transition: background-color 0.3s ease-in-out;
   padding: 10px 0;
 }
 
 .toggle-container.toggled {
-  background-color: #000000; /* Green background when toggled */
+  background-color: #3c3c3c; /* Green background when toggled */
 }
 
 .toggle-text {
   position: absolute;
   top: 15px;
-  font-family: 'Arial', sans-serif;
+  font-family: 'IBM Plex Mono';
   transition: all 0.3s ease-in-out;
   overflow: hidden;
   width: 100%;
@@ -66,23 +65,23 @@
 }
 
 /* Linear gradient for text on hover */
-.toggle-container:hover .toggle-text .toggle-text-inner span {
-  background: linear-gradient(45deg, #ff7e5f, #feb47b);
+/* .toggle-container:hover .toggle-text .toggle-text-inner span {
+  background: linear-gradient(45deg, #000000, #000000);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-}
+} */
 
 .toggle-text.toggled {
-  transform: translateY(75px);
+  transform: translateY(45px);
   color: #ffffff;
 }
 
 .toggle-switch {
-  width: 140px;
-  height: 65px;
+  width: 110px;
+  height: 40px;
   background-color: rgb(0, 0, 0);
-  border-radius: 40px;
+  border-radius: 12px;
   position: absolute;
   bottom: 10px;
   display: flex;
@@ -92,13 +91,13 @@
 }
 
 .toggle-switch.toggled {
-  transform: translateY(-35px);
+  transform: translateY(-28px);
   background-color: #ffffff;  
 }
 
 .toggle-icon {
   color: #e7e7e7;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .toggle-switch.toggled .toggle-icon {
