--- a/src/components/css/ToggleButton.css
+++ b/src/components/css/ToggleButton.css
@@ -21,7 +21,7 @@
 }
 
 .toggle-container.toggled {
-  background-color: #3c3c3c; /* Green background when toggled */
+  background-color: rgb(22, 22, 22); /* Green background when toggled */
 }
 
 .toggle-text {
