--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ body {
   border: 15px solid #fff;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 20; /* Above the main content but below the frame */
   pointer-events: none;
   opacity: 0;
@@ -205,7 +205,8 @@ body {
   transform: translate(-50%, -50%);
   width: 100px;
   height: 100px;
-  background-image: url("./assets/pixel_lapop.png");
+  background-image: url("./assets/pixel_laptop.png");
+
   background-size: contain;
   background-repeat: no-repeat;
   z-index: 21; /* Above the translucent layer but below the frame */
