--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@ body {
   transform: translate(-50%, -50%);
   width: 100px;
   height: 100px;
-  background-image: url("./assets/pixel_laptop.png");
+  background-image: url("./assets/pixellaptop.png");
 
   background-size: contain;
   background-repeat: no-repeat;
